# vim-strand

./: Cargo.toml  README.md
.github/workflows/: cd.yaml  ci.yaml
profiles/: .gitignore  profile.sh  profile_harness.vim  run_profile.vim
src/: lib.rs  main.rs
