[package]
name = "strand"
version = "0.2.0"
authors = ["Aramis Razzaghipour <aramisnoah@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-macros = "2"
async-std = { version = "1", features = ["attributes", "unstable"] }
colored = "1"
crossterm = "0.14"
dirs = "2"
flate2 = "1"
pbr = "1"
serde = { version = "1", features = ["derive"] }
shrinkwraprs = "0.3"
structopt = "0.3"
surf = "1"
tar = "0.4"
thiserror = "1"
url = { version = "2", features = ["serde"] }
yaml = { version = "0.8", package = "serde_yaml" }
